force-app/main/default/objects/purecloud__PureCloud_Log__c/purecloud__PureCloud_Log__c.object-meta.xml
<CustomObject>
    <description>Log messages created by the Genesys Cloud API for Salesforce</description>
    <label>Genesys Cloud Log</label>
    <nameField>
        <label>Genesys Cloud Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Genesys Cloud Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>