force-app/main/default/objects/purecloud__PureCloud_Log__c/fields/purecloud__Level__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Level__c</fullName>
    <label>Level</label>
    <length>10</length>
    <type>Text</type>
</CustomField>