force-app/main/default/objects/purecloud__PureCloud_Log__c/fields/purecloud__Message__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Message__c</fullName>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>