force-app/main/default/objects/purecloud__PureCloud_Log__c/fields/purecloud__Timestamp__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Timestamp__c</fullName>
    <label>Timestamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>