force-app/main/default/objects/purecloud__PureCloud_Log__c/listViews/purecloud__PureCloud_Error_Logs.listView-meta.xml
<ListView>
    <fullName>purecloud__PureCloud_Error_Logs</fullName>
    <columns>NAME</columns>
    <columns>purecloud__Level__c</columns>
    <columns>purecloud__Message__c</columns>
    <columns>purecloud__Timestamp__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>purecloud__Level__c</field>
        <operation>equals</operation>
        <value>ERROR</value>
    </filters>
    <label>Genesys Cloud Error Logs</label>
</ListView>