force-app/main/default/objects/purecloud__PureCloud_Log__c/listViews/purecloud__PureCloud_Logs.listView-meta.xml
<ListView>
    <fullName>purecloud__PureCloud_Logs</fullName>
    <columns>NAME</columns>
    <columns>purecloud__Level__c</columns>
    <columns>purecloud__Message__c</columns>
    <columns>purecloud__Timestamp__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>purecloud__Processed__c</columns>
    <filterScope>Everything</filterScope>
    <label>Genesys Cloud Logs</label>
</ListView>